# NetworkingHelper

./: .gitignore  CMakeLists.txt  Project  get_libs_dep.cmake  libs_dep.json  make_library.cmake
.github/workflows/: linux.yml
include/networking/: RawTransferData.h  ReceiveRawTransferDataError.h  ReceiverHelper.h  SenderHelper.h
lib/: NetworkingHelper_AMD64.lib
src/networking/: ReceiveHelper.cpp  SenderHelper.cpp
